Fix white space at the bottom of the page issue.
Fix issue by defining height of body element.

Remove background repeat.

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     margin: 0px;
+    height: 94vh;
     background: radial-gradient(circle at 12.3% 19.3%, rgb(85, 88, 218) 0%, rgb(95, 209, 249) 100.2%);
     background-size: 100%;
 }
